unpackaged/main/default/objects/Quote_Staging__c/Quote_Staging__c.object-meta.xml
<CustomObject>
    <description>Custom Object for Quote Staging.</description>
    <label>Quote Staging</label>
    <nameField>
        <label>TOPS Quote Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotes Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>