unpackaged/main/default/objects/Quote_Staging__c/fields/Apply_Round_Trip_Discount__c.field-meta.xml
<CustomField>
    <fullName>Apply_Round_Trip_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Apply Round Trip Discount</description>
    <inlineHelpText>Apply Round Trip Discount</inlineHelpText>
    <label>Apply Round Trip Discount</label>
    <type>Checkbox</type>
</CustomField>