unpackaged/main/default/objects/Quote_Staging__c/fields/Attempt__c.field-meta.xml
<CustomField>
    <fullName>Attempt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Attempt</description>
    <inlineHelpText>Attempt</inlineHelpText>
    <label>Attempt</label>
    <type>Checkbox</type>
</CustomField>