unpackaged/main/default/objects/Quote_Staging__c/fields/Call_Before_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Call_Before_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Call Before Delivery</description>
    <inlineHelpText>Call Before Delivery</inlineHelpText>
    <label>Call Before Delivery</label>
    <type>Checkbox</type>
</CustomField>