unpackaged/main/default/objects/Quote_Staging__c/fields/Complete_By__c.field-meta.xml
<CustomField>
    <fullName>Complete_By__c</fullName>
    <description>Complete By</description>
    <inlineHelpText>Complete By</inlineHelpText>
    <label>Complete By</label>
    <type>Date</type>
</CustomField>