unpackaged/main/default/objects/Quote_Staging__c/fields/CORE_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>CORE_Order_Number__c</fullName>
    <description>CORE Order #</description>
    <inlineHelpText>CORE Order #</inlineHelpText>
    <label>CORE Order #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>