unpackaged/main/default/objects/Quote_Staging__c/fields/Delivery_Destination__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Destination__c</fullName>
    <description>Delivery Destination</description>
    <inlineHelpText>Delivery Destination</inlineHelpText>
    <label>Delivery Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>