unpackaged/main/default/objects/Quote_Staging__c/fields/Delivery_Show_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Show_Contractor__c</fullName>
    <description>Delivery Show Contractor</description>
    <inlineHelpText>Delivery Show Contractor</inlineHelpText>
    <label>Delivery Show Contractor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>