unpackaged/main/default/objects/Quote_Staging__c/fields/Destination_City__c.field-meta.xml
<CustomField>
    <fullName>Destination_City__c</fullName>
    <description>Destination City</description>
    <inlineHelpText>Destination City</inlineHelpText>
    <label>Destination City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>