unpackaged/main/default/objects/Quote_Staging__c/fields/EDV_Amount__c.field-meta.xml
<CustomField>
    <fullName>EDV_Amount__c</fullName>
    <description>EDV Amount</description>
    <inlineHelpText>EDV Amount</inlineHelpText>
    <label>EDV Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>