unpackaged/main/default/objects/Quote_Staging__c/fields/Lift_Gate__c.field-meta.xml
<CustomField>
    <fullName>Lift_Gate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lift Gate</description>
    <inlineHelpText>Lift Gate</inlineHelpText>
    <label>Lift Gate</label>
    <type>Checkbox</type>
</CustomField>