unpackaged/main/default/objects/Quote_Staging__c/fields/OB_Advance_Order_Discount__c.field-meta.xml
<CustomField>
    <fullName>OB_Advance_Order_Discount__c</fullName>
    <description>Advance Order Discount (%)</description>
    <inlineHelpText>Advance Order Discount (%)</inlineHelpText>
    <label>OB Advance Order Discount (%)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>