unpackaged/main/default/objects/Quote_Staging__c/fields/OB_AM_Specified_Fee__c.field-meta.xml
<CustomField>
    <fullName>OB_AM_Specified_Fee__c</fullName>
    <description>AM Specified Fee</description>
    <inlineHelpText>AM Specified Fee</inlineHelpText>
    <label>OB AM Specified Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>