unpackaged/main/default/objects/Quote_Staging__c/fields/OB_Call_Before_Pickup__c.field-meta.xml
<CustomField>
    <fullName>OB_Call_Before_Pickup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Call Before Pickup</description>
    <inlineHelpText>Call Before Pickup</inlineHelpText>
    <label>Call Before Pickup</label>
    <type>Checkbox</type>
</CustomField>