unpackaged/main/default/objects/Quote_Staging__c/fields/OB_Carrier_Notes__c.field-meta.xml
<CustomField>
    <fullName>OB_Carrier_Notes__c</fullName>
    <description>Carrier Notes</description>
    <inlineHelpText>Carrier Notes</inlineHelpText>
    <label>Carrier Notes</label>
    <type>TextArea</type>
</CustomField>