unpackaged/main/default/objects/Quote_Staging__c/fields/OB_Custom_Quote__c.field-meta.xml
<CustomField>
    <fullName>OB_Custom_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom Quote</description>
    <inlineHelpText>Custom Quote</inlineHelpText>
    <label>Custom Quote</label>
    <type>Checkbox</type>
</CustomField>