unpackaged/main/default/objects/Quote_Staging__c/fields/OB_Delivery_Booth_No__c.field-meta.xml
<CustomField>
    <fullName>OB_Delivery_Booth_No__c</fullName>
    <description>Delivery Booth #</description>
    <inlineHelpText>Delivery Booth #</inlineHelpText>
    <label>Delivery Booth #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>