unpackaged/main/default/objects/Quote_Staging__c/fields/OB_Delivery_Show_Name__c.field-meta.xml
<CustomField>
    <fullName>OB_Delivery_Show_Name__c</fullName>
    <description>Delivery Show Name</description>
    <inlineHelpText>Delivery Show Name</inlineHelpText>
    <label>Delivery Show Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>