unpackaged/main/default/objects/Quote_Staging__c/fields/OB_Lift_Gate_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>OB_Lift_Gate_Surcharge__c</fullName>
    <description>Lift Gate Fee</description>
    <inlineHelpText>Lift Gate Fee</inlineHelpText>
    <label>OB Lift Gate Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>