unpackaged/main/default/objects/Quote_Staging__c/fields/OB_Origination_City__c.field-meta.xml
<CustomField>
    <fullName>OB_Origination_City__c</fullName>
    <description>Origination City</description>
    <inlineHelpText>Origination City</inlineHelpText>
    <label>Origination City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>