unpackaged/main/default/objects/Quote_Staging__c/fields/OB_Origination_Street__c.field-meta.xml
<CustomField>
    <fullName>OB_Origination_Street__c</fullName>
    <description>Origination Street</description>
    <inlineHelpText>Origination Street</inlineHelpText>
    <label>Origination Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>