unpackaged/main/default/objects/Quote_Staging__c/fields/OB_Palletization_Fee__c.field-meta.xml
<CustomField>
    <fullName>OB_Palletization_Fee__c</fullName>
    <description>Palletization Fee</description>
    <inlineHelpText>Palletization Fee</inlineHelpText>
    <label>OB Palletization Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>