unpackaged/main/default/objects/Quote_Staging__c/fields/OB_Pickup_Date__c.field-meta.xml
<CustomField>
    <fullName>OB_Pickup_Date__c</fullName>
    <description>Pickup Date</description>
    <inlineHelpText>Pickup Date</inlineHelpText>
    <label>Pickup Date</label>
    <type>Date</type>
</CustomField>