unpackaged/main/default/objects/Quote_Staging__c/fields/OB_Pickup_Show_Contractor__c.field-meta.xml
<CustomField>
    <fullName>OB_Pickup_Show_Contractor__c</fullName>
    <description>Pickup Show Contractor</description>
    <inlineHelpText>Pickup Show Contractor</inlineHelpText>
    <label>Pickup Show Contractor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>