unpackaged/main/default/objects/Quote_Staging__c/fields/OB_Residential_Pickup__c.field-meta.xml
<CustomField>
    <fullName>OB_Residential_Pickup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Residential Pickup</description>
    <inlineHelpText>Residential Pickup</inlineHelpText>
    <label>Residential Pickup</label>
    <type>Checkbox</type>
</CustomField>