unpackaged/main/default/objects/Quote_Staging__c/fields/OB_Round_Trip_Discount__c.field-meta.xml
<CustomField>
    <fullName>OB_Round_Trip_Discount__c</fullName>
    <description>Round Trip Discount (%)</description>
    <inlineHelpText>Round Trip Discount (%)</inlineHelpText>
    <label>OB Round Trip Discount (%)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>