unpackaged/main/default/objects/Quote_Staging__c/fields/OB_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>OB_Service_Type__c</fullName>
    <description>Service Type</description>
    <inlineHelpText>Service Type</inlineHelpText>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FTL</fullName>
            </value>
            <value>
                <fullName>LTL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>