unpackaged/main/default/objects/Quote_Staging__c/fields/OB_Shipment_Type__c.field-meta.xml
<CustomField>
    <fullName>OB_Shipment_Type__c</fullName>
    <description>Shipment Type</description>
    <inlineHelpText>Shipment Type</inlineHelpText>
    <label>Shipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air Transportation</fullName>
            </value>
            <value>
                <fullName>Ground Transportation</fullName>
            </value>
            <value>
                <fullName>Local Shipments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>