unpackaged/main/default/objects/Quote_Staging__c/fields/OB_Weekend_Fee__c.field-meta.xml
<CustomField>
    <fullName>OB_Weekend_Fee__c</fullName>
    <description>Weekend Fee</description>
    <inlineHelpText>Weekend Fee</inlineHelpText>
    <label>OB Weekend Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>