unpackaged/main/default/objects/Quote_Staging__c/fields/OB_Weekend_Pickup__c.field-meta.xml
<CustomField>
    <fullName>OB_Weekend_Pickup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Weekend Pickup (Non GES)</description>
    <inlineHelpText>Weekend Pickup (Non GES)</inlineHelpText>
    <label>Weekend Pickup (Non GES)</label>
    <type>Checkbox</type>
</CustomField>