unpackaged/main/default/objects/Quote_Staging__c/fields/Pickup_Booth_No__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Booth_No__c</fullName>
    <description>Pickup Booth #</description>
    <inlineHelpText>Pickup Booth #</inlineHelpText>
    <label>Pickup Booth #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>