unpackaged/main/default/objects/Quote_Staging__c/fields/Pickup_Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Show_Name__c</fullName>
    <description>Pickup Show Name/Location</description>
    <inlineHelpText>Pickup Show Name/Location</inlineHelpText>
    <label>Pickup Show Name/Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>