unpackaged/main/default/objects/Quote_Staging__c/fields/Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>Quote_Id__c</fullName>
    <description>Quote Id - Id Field for staging table. unique identifier.</description>
    <inlineHelpText>Quote Id</inlineHelpText>
    <label>Quote Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>