unpackaged/main/default/objects/Quote_Staging__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <description>Quote Number</description>
    <inlineHelpText>Quote Number - Quote Name</inlineHelpText>
    <label>Quote Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>